<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@android:color/background_light"
        android:orientation="vertical">

    <!-- Text Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chrootinfo"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/background_dark"
        android:textColorLink="@android:color/background_dark"
        android:textIsSelectable="true"
        android:textSize="@dimen/abc_action_bar_default_height_material" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dip"
        android:text="@string/upschedule"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_blue_bright"
        android:textStyle="bold" />

    <!-- Spinner Element -->
    <Spinner
        android:id="@+id/cht_upschedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title1"
        android:background="@android:color/holo_blue_bright"
        android:layout_weight="2.16"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dip"
        android:text="@string/downschedule"
        android:layout_marginBottom="10dp"
        android:background="@android:color/holo_blue_bright"
        android:textStyle="bold" />

    <!-- Spinner Element -->
    <Spinner
        android:id="@+id/cht_downschedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_title2"
        android:background="@android:color/holo_blue_bright"
        android:layout_weight="2.16"
        android:spinnerMode="dialog" />


    <Button
        android:layout_height="wrap_content"
        android:clickable="true"
        android:autoLink="web"
        android:cursorVisible="true"
        android:layout_width="wrap_content"
        android:id="@+id/button_so"
        android:text="ফেসবুক চৈতালি গ্রুপ"
        android:linksClickable="true"
        android:drawableLeft="@drawable/icon_fb"
        android:onClick="goToSo"
        android:background="@android:color/holo_blue_light"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:textStyle="bold">

    </Button>

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="Add Notice"
        android:id="@+id/add_notice"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:checked="false"
        android:background="#ff9900"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        android:drawableLeft="@drawable/icon_notice"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="New Notice"
        android:id="@+id/new_notice"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05"
        android:checked="false"
        android:background="#ff9900"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textStyle="bold"
        android:drawableLeft="@drawable/icon_notice2"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:id="@+id/logomellowhost"
        android:src="@drawable/logo"
        style="@style/Base.Widget.AppCompat.ButtonBar.AlertDialog"
        android:accessibilityLiveRegion="@integer/google_play_services_version"
        android:accessibilityTraversalAfter="@integer/status_bar_notification_info_maxnum"
        android:accessibilityTraversalBefore="@integer/design_snackbar_text_max_lines"
        android:adjustViewBounds="true"
        android:backgroundTint="#c61515"
        android:layout_gravity="right"
        android:layout_marginTop="120dp" />


    </LinearLayout>
</ScrollView>
